# cpp-svglib

./: .gitignore  CMakeLists.txt  README.md  main.cpp  svglib.hpp
cmake/: Findsvglib.cmake  svglib-config.cmake
example/: CMakeLists.txt  main.cpp
include/: CMakeLists.txt  color.hpp  conversion.hpp  fill.hpp  height.hpp  line.hpp  opacity.hpp  point.hpp  rectangle.hpp  serializeable.hpp  shape.hpp  size.hpp  stroke.hpp  svglib.hpp  unit.hpp  width.hpp
src/: CMakeLists.txt  color.cpp  color.hpp  svglib.hpp
src/example/: CMakeLists.txt
src/svglib/: CMakeLists.txt  svglib.hpp
